tests/models/struct/unnamed/i64/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    i64
);
fn main() {}
